feat(jsonrpc): add managed list includes and support catalog CRUD
